# SimpleEngine2D

./: .gitignore  CMakeLists.txt  Problem_with_IElement.patch  README.md  cmake_install.cmake
Resoures/Sprites/: Ball.piskel  Hero.piskel  Man.piskel
cmake_modules/: FindSFML.cmake
src/: CMakeLists.txt  MainWrapper.cpp  cmake_install.cmake
src/include/: Engine.hpp  IEngine.hpp  IManager.hpp  Logger.hpp  Manager.hpp
src/include/Animations/: Animation.hpp  AnimationSprite.hpp  SpriteReader.hpp
src/include/Buttons/: LetterButton.hpp  NormalButton.hpp
src/include/Detectors/: CollisionDetector.hpp  EventDetector.hpp  ICollisionDetector.hpp  IEventDetector.hpp
src/include/Generators/: EventGenerator.hpp  IEventGenerator.hpp
src/include/Helpers/: ElementProperties.hpp
src/include/Interface/: ICallable.hpp  IClickable.hpp  IDetector.hpp  IElement.hpp
src/include/Modules/: DetectorsModule.hpp  FPSModule.hpp  IDetectorsModule.hpp
src/include/Windows/: InfoWindow.hpp  MainWindow.hpp
src/sources/: Engine.cpp  Logger.cpp  Manager.cpp
src/sources/Animations/: Animation.cpp  AnimationSprite.cpp  SpriteReader.cpp
src/sources/Buttons/: LetterButton.cpp  NormalButton.cpp
src/sources/Detectors/: CollisionDetector.cpp  EventDetector.cpp
src/sources/Factories/: DetectorsModule.cpp
src/sources/Generators/: EventGenerator.cpp
src/sources/Helpers/: ElementProperties.cpp
src/sources/Modules/: DetectorsModule.cpp  FPSModule.cpp
src/sources/Windows/: InfoWindow.cpp  MainWindow.cpp
tests/: CMakeLists.txt
tests/UT/: CollisionDetectorTests.cpp  ElementPropertiesTests.cpp  EventDetectorTests.cpp  LetterButtonTests.cpp  MainWindowTests.cpp
tests/mocks/: MockSfColor.cpp  MockSfFont.cpp
tests/utils/mocks/: ICollisionDetectorMock.hpp  IDectectorsModuleMock.hpp  IDetectorMock.hpp  IEngineMock.hpp  IEventDetectorMock.hpp  IEventGeneratorMock.hpp  SfWindowMock.hpp
