cmake_minimum_required(VERSION 3.10)
project(PARANOID)
set(CMAKE_CXX_STANDARD 14)
set(EXECUTABLE_NAME "PARANOID")
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
if (${TARGET} tests)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_MYSYMBOL")
endif ()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG")
add_subdirectory(src)
add_subdirectory(tests)

FILE(COPY Resoures/Pacific_Again.ttf DESTINATION "${CMAKE_BINARY_DIR}")
FILE(COPY Resoures/icon.png DESTINATION "${CMAKE_BINARY_DIR}")


